Fixed top bar z-index
fixed z-index issue with top bar.
Resolves #31

--- a/evolved.less
+++ b/evolved.less
@@ -596,6 +596,7 @@ a {
 
 .topBar {
     top:0;
+    z-index: 10;
     .calendar {
         margin: 0 auto;
         .temp {
